# activity-anticipation-with-mllm

./: .env.example  .gitignore  KG_builder.py  Rag.py  frame_to_video.py  gemini_api.py  main.py  mediapipe_test.py  pyproject.toml  scene_recognition_mobile.py  scene_recognition_mobilev2.py  scene_recognition_resnet.py  test_rag.py  utils.py  utils2.py
OnlineECParser-master/OnlineECParser-master/: README.md  onlineECParser.ipynb
OnlineECParser-master/OnlineECParser-master/clingo/: format-output13042022.cc
OnlineECParser-master/OnlineECParser-master/inference/: ecasp88.txt
OnlineECParser-master/OnlineECParser-master/lp/: decOrigin2.lp  events.lp  sorts.lp
OnlineECParser-master/OnlineECParser-master/lp/.ipynb_checkpoints/: activities-checkpoint.lp  ecasp888-checkpoint.lp  ecasp88888-checkpoint.lp  events-checkpoint.lp  sorts-checkpoint.lp
yolo/: client.py  server.py
